# ProgrammingSchool

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg
aggregation_system/: common.py
aggregation_system/db/: create_db.sql  db_core.py  db_tables.py  system_information.db
aggregation_system/server/server/: asgi.py  settings.py  urls.py  wsgi.py
aggregation_system/server/test_server/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
aggregation_system/server/test_server/migrations/: 0001_initial.py  0002_auto_20220120_1715.py  0002_auto_20220125_1324.py  0003_auto_20220120_1723.py  0004_auto_20220120_1829.py  0005_remove_systemloadinformation_max_params.py
aggregation_system/server/web_client/: admin.py  models.py  serializers.py  studentAllTasks.html  submit.py  urls.py  views.py
aggregation_system/server/web_client/migrations/: 0002_delete_operatingtime.py  0003_checksend_resultsend.py  0004_auto_20211213_1432.py  0005_auto_20211213_1432.py  0006_checksend_code_file.py  0007_checksendjson.py  0008_delete_checksendjson_rename_code_file_checksend_code.py  0009_usertypes_users.py  0010_alter_usertypes_user_type.py  0011_users_user_mail_users_user_name.py  0012_alter_users_user_mail_alter_users_user_name.py  0013_alter_checksend_code.py  0014_marks_alter_checksend_user_id_tasks_and_more.py  0015_resulttest_delete_resultsend.py  0016_rename_resulttest_completetask.py  (+9 more)
project/server/server/: settings.py  urls.py
project/server/web_client/: admin.py  datas.py  serializers.py  urls.py  views.py
(+16 files in other folders)
