[tool.poetry]
name = "aggregation_system"
version = "1.0.0"
description = "Aggregation System"
authors = ["Slava Litvinov"]
readme = "README.md"
repository = "https://git.miem.hse.ru/980/aggregation_system.git/"
documentation = "TBD"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
pytest = "^6.2.1"
ipykernel = "^5.4.2"
fire = "^0.3.1"

Sphinx = "^3.5.3"
catalyst-sphinx-theme = "^1.1.2"

clearml-agent = "^1.0.1rc4"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["evonets", "mlops"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
