[tool.poetry]
name = "aggregation_system"
version = "1.0.0"
description = "Aggregation System"
authors = ["Demidov Ivan"]
readme = "README.md"
repository = "https://git.miem.hse.ru/980/aggregation_system.git/"
documentation = "TBD"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["aggregation_system"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
